--- a/src/main.css
+++ b/src/main.css
@@ -26,6 +26,14 @@ ol, ul {
     text-align: center;
     width: 34px;
   }
+
+  .green {
+      color: green;
+  }
+
+  .red {
+      color: red;
+  }
   
   .square:focus {
     outline: none;
